<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomePage">


            <TextView
                android:id="@+id/textView_Home_Welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/Welcome"
                android:textColor="@color/purple_700"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/button_Home_Logout"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_alignEnd="@id/gridLayout_Home_btnCategory"
                android:src="@drawable/baseline_logout_36"
                android:background="@null"
                android:contentDescription="@string/Logout" />

            <TextView
                android:id="@+id/textView_Home_Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_Home_Welcome"
                android:textColor="@color/purple_500"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/Category" />

            <GridLayout
                android:id="@+id/gridLayout_Home_btnCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="2"
                android:layout_below="@id/textView_Home_Category"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <Button
                    android:layout_margin="10dp"
                    android:text="@string/Category1"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_custbtn_category"
                    />

                <Button
                    android:layout_margin="10dp"
                    android:text="@string/Category2"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_custbtn_category" />

                <Button
                    android:layout_margin="10dp"
                    android:text="@string/Category3"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_custbtn_category" />

                <Button
                    android:layout_margin="10dp"
                    android:text="@string/Category4"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_custbtn_category" />

                <Button
                    android:layout_margin="10dp"
                    android:text="@string/Category5"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_custbtn_category" />

                <Button
                    android:layout_margin="10dp"
                    android:text="@string/Category6"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_custbtn_category" />
            </GridLayout>

            <TextView
                android:id="@+id/textView_Home_AllSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gridLayout_Home_btnCategory"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/purple_500"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/Songs" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reView_Home_SongLists"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textView_Home_AllSong"
                android:padding="15dp"

                />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>