<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginBottom="0dp"
    >


    <ImageView
        android:id="@+id/imageView_Login_Logo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/muse_io"
        android:layout_gravity="center"
        android:contentDescription="@string/Logo"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress_Login_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/Email"
        android:textColor="@color/black"
        android:background="@drawable/edittext_roundedcorner"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword_Login_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/Password"
        android:background="@drawable/edittext_roundedcorner"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/black"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="10dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_500"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/textView_Login_forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ForgotPassword"
        android:layout_gravity="center"
        android:textColor="@color/purple_500"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/textView_Login_MadeBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:textColor="@color/purple_200"
        android:text="@string/MadeBy" />


</LinearLayout>